syntax = "proto3";

option csharp_namespace = "EvMa.CatalogService.Protos";

package catalog_service;

import "google/protobuf/timestamp.proto";
import "Protos/models/grpc_dimensions.proto";
import "Protos/models/grpc_price.proto";
import "Protos/models/grpc_attributeset.proto";
import "Protos/models/grpc_attributevalue.proto";
import "Protos/models/grpc_image.proto";

message GrpcProduct {
	string id = 1;
	string sku = 2;
	string name = 3;
	string description = 4;
	double weight = 5;
	GrpcDimensions dimensions = 6;
	double regular_price = 7;
	repeated GrpcPrice prices = 8;
	double stock_quantity = 9;
	string attribute_set_id = 10;
	repeated GrpcAttributeValue attribute_values = 11;
	repeated GrpcImage images = 12;
	repeated string tags = 13;
	bool is_active = 14;
}